2010-01-14  Andrey Belevantsev  <abel@ispras.ru>

	PR rtl-optimization/42246
	* sel-sched-ir.h (get_all_loop_exits): Include exits from inner
	loops.

2010-01-14  Andrey Belevantsev  <abel@ispras.ru>

	* sel-sched.c (compute_av_set_at_bb_end): Do not test that number of
	all successors is the same as number of successors in current region.

2010-01-14  Alexander Monakov  <amonakov@ispras.ru>

	* sel-sched.c (maybe_emit_renaming_copy): Exit early when expression
	to rename is not separable.  Otherwise check that its LHS is not NULL.

2010-01-14  Alexander Monakov  <amonakov@ispras.ru>

	* sel-sched.c (choose_best_reg_1):  Loop over all regs for mode.

2010-01-14  Alexander Monakov  <amonakov@ispras.ru>

	* sel-sched.c (mark_unavailable_hard_regs): Do not try to search
	available registers when failed to discover LHS register class.
	Fix indentation.  Update comment.

2010-01-14  Andrey Belevantsev  <abel@ispras.ru>
	    Alexander Monakov  <amonakov@ispras.ru>

	PR rtl-optimization/42389
	* sel-sched.c (advance_one_cycle): Set FENCE_ISSUE_MORE
	to can_issue_more.
	(advance_state_on_fence): Likewise.
	(sel_target_adjust_priority): Print debug output only when
	sched_verbose >= 4, not 2.
	(get_expr_cost): Do not issue all unique insns on the next cycle.
	(fill_insns): Initialize can_issue_more from the value saved
	with the fence.
	* sel-sched-ir.c (flist_add): New parameter issue_more.
	Init FENCE_ISSUE_MORE with it.
	(merge_fences): Likewise.
	(init_fences): Update call to flist_add.
	(add_to_fences, add_clean_fence_to_fences)
	(add_dirty_fence_to_fences): Likewise.
	(move_fence_to_fences): Update call to merge_fences.
	(invoke_reorder_hooks): Do not reset can_issue_more on insns from
	sched groups.
	* sel-sched-ir.h (struct _fence): New field issue_more.
	(FENCE_ISSUE_MORE): New accessor macro.

2010-01-14  Andrey Belevantsev  <abel@ispras.ru>

	PR rtl-optimization/42388
	* sel-sched-ir.c (maybe_tidy_empty_bb): Do not delete empty blocks